# dotfiles

./: .env.example  .gitignore  Brewfile  README.md  install.sh
claude/: CLAUDE.md  README.md  crontab.txt  env.sh  install-launchagents.sh  org-map.json  refresh.sh  settings.json
claude-json/: claude.json
claude-stack-audit/: .gitignore  README.md  pyproject.toml
claude-stack-audit/src/claude_stack_audit/: __init__.py  __main__.py  cli.py  config.py  context.py  external.py  models.py  runner.py
claude-stack-audit/src/claude_stack_audit/checks/: __init__.py  base.py  cross_cutting.py  documentation.py  inventory.py  observability.py  reliability.py
claude-stack-audit/src/claude_stack_audit/reports/: json_report.py  markdown.py
claude-stack-audit/tests/: conftest.py  test_cli.py  test_config.py  test_context.py  test_cross_cutting.py  test_documentation.py  test_external.py  test_inventory.py  test_models.py  test_observability.py  test_reliability.py  test_reports_json.py  test_reports_markdown.py  test_runner.py
claude-stack-audit/tests/integration/: test_full_run.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  INSTALL.md  settings.hooks.md
ghostty/: config
git/: .gitconfig  .gitignore_global
pre-commit/: .pre-commit-config.yaml  cstack-critical-gate.sh
raycast/: project-switcher.sh
starship/: starship.toml
templates/: .env.example  install-checklist.md  obsidian-setup.md  project-CLAUDE.md
tests/: auto_format.bats  claude_mem_hook_patcher.bats  crons_smoke.bats  env_preflight.bats  healthcheck.bats  hooks_log.bats  launchagents.bats  (+7 more)
(+101 files in other folders)
